[gd_scene load_steps=20 format=2]

[ext_resource path="res://Textures/Monsters/Abbadon/SPRITES/hed3b1.png" type="Texture" id=1]
[ext_resource path="res://Textures/Monsters/Abbadon/SPRITES/hed3a1.png" type="Texture" id=2]
[ext_resource path="res://Textures/Monsters/Abbadon/SPRITES/hed3c1.png" type="Texture" id=3]
[ext_resource path="res://Textures/Monsters/Abbadon/SPRITES/hed3e1.png" type="Texture" id=4]
[ext_resource path="res://Textures/Monsters/Abbadon/SPRITES/hed3f1.png" type="Texture" id=5]
[ext_resource path="res://Textures/Monsters/Abbadon/SPRITES/hed3g0.png" type="Texture" id=6]
[ext_resource path="res://Textures/Monsters/Abbadon/SPRITES/hed3h0.png" type="Texture" id=7]
[ext_resource path="res://Textures/Monsters/Abbadon/SPRITES/hed3d1.png" type="Texture" id=8]
[ext_resource path="res://Textures/Monsters/Abbadon/SPRITES/hed3o0.png" type="Texture" id=9]
[ext_resource path="res://Textures/Monsters/Abbadon/SPRITES/hed3l0.png" type="Texture" id=10]
[ext_resource path="res://Textures/Monsters/Abbadon/SPRITES/hed3n0.png" type="Texture" id=11]
[ext_resource path="res://Textures/Monsters/Abbadon/SPRITES/hed3k0.png" type="Texture" id=12]
[ext_resource path="res://Textures/Monsters/Abbadon/SPRITES/hed3m0.png" type="Texture" id=13]
[ext_resource path="res://Textures/Monsters/Abbadon/SPRITES/hed3i0.png" type="Texture" id=14]
[ext_resource path="res://Textures/Monsters/Abbadon/SPRITES/hed3j0.png" type="Texture" id=15]
[ext_resource path="res://Scripts/Abbadon.gd" type="Script" id=16]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.63899, 0.638822, 0.630696 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 8 ) ],
"loop": true,
"name": "attack",
"speed": 10.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 11 ), ExtResource( 9 ) ],
"loop": false,
"name": "die",
"speed": 10.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 5 ) ],
"loop": true,
"name": "getDamage",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "walking",
"speed": 5.0
} ]

[sub_resource type="CylinderShape" id=3]
radius = 18.6403

[node name="Abbadon" type="KinematicBody" groups=["enemy"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.371836, 0 )
script = ExtResource( 16 )
speed = 780

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
centered = false
offset = Vector2( -32.003, -36 )
flip_h = true
billboard = 2
frames = SubResource( 2 )
animation = "walking"
playing = true

[node name="Visual" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, -20 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Ear" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Ear"]
shape = SubResource( 3 )

[node name="ShootingTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Ear" to="." method="_on_Ear_body_entered"]
[connection signal="timeout" from="ShootingTimer" to="." method="_on_ShootingTimer_timeout"]
